# axum-server

./: Cargo.toml
site/: index.html  styles.css
src/: main.rs
